Fix text underline css on safari
- Update from text-decoration css2 to css3 properties

--- a/src/styles/common/_global.scss
+++ b/src/styles/common/_global.scss
@@ -26,8 +26,9 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
-  text-underline-offset: 0.15em;
+  text-decoration-line: none;
+  text-underline-offset: 0.2em;
+  text-decoration-thickness: 0.07em;
 
   &:hover {
     color: var(--color--secondary);
