--- a/src/styles/layouts/_home.scss
+++ b/src/styles/layouts/_home.scss
@@ -1,6 +1,6 @@
 #about {
   a[href^="mailto:"] {
-    text-decoration: underline 0.07em;
+    text-decoration-line: underline;
   }
 
   .section__content {
